Support different schema to header.